third_party/rust/indoc/v1/crate/tests/ui/two-arguments.stderr
error: unexpected token in macro invocation; indoc argument must be a single string literal
 --> $DIR/two-arguments.rs:8:11
  |
8 |         " 64);
  |           ^^
